# Secure-file-transfer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
.github/workflows/: CI.yml  cpplint.yml  tests.yml
res/: private_key.pem  public_key.pem
src/: config.h  constants_storage.h  main.cpp
src/Application/: Application.cpp  Application.h
src/Crypto/: Crypto.cpp  Crypto.h
src/Network/: Client.cpp  Client.h  Server.cpp  Server.h
src/app/: Application.cpp  Application.h
src/crypto/: Crypto.cpp  Crypto.h
src/network/: Client.cpp  Client.h  Server.cpp  Server.h
src/util/: command_line_parser.cpp  command_line_parser.h
src/util/Parser/: command_line_parser.h
src/util/logger/: logger.cpp  logger.h
src/util/parser/: command_line_parser.cpp  command_line_parser.h
tests/Application/: smoke_test.cpp
tests/CommandLineParser/: client_config_tests.cpp  general_tests.cpp  server_config_tests.cpp  test_framework_for_parser.cpp  test_framework_for_parser.h
